[workspace]
resolver = "2"
members = [
    "fatah-core",
    "fatah-testing",
    "fatah-attack",
    "fatah-cli",
    "fatah-report",
    "fatah-macros",
    "fatah-net",
    "fatah-proto",
    "fatah-database",
    "fatah-session",
    "fatah-spray",
    "fatah-telemetry",
    "fatah-wordlist",
    "benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ifrit Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AIAnsar1/Fatah"
rust-version = "1.94"

[workspace.dependencies]
fatah-core = { path = "fatah-core" }
fatah-testing = { path = "fatah-testing" }
fatah-attack = { path = "fatah-attack" }
fatah-cli = { path = "fatah-cli" }
fatah-report = { path = "fatah-report" }
fatah-macros = { path = "fatah-macros" }
fatah-net = { path = "fatah-net" }
fatah-proto = { path = "fatah-proto" }
fatah-database = { path = "fatah-database" }
fatah-session = { path = "fatah-session" }
fatah-telemetry = { path = "fatah-telemetry" }
fatah-spray = { path = "fatah-spray" }
fatah-wordlist = { path = "fatah-wordlist" }
tokio = { version = "1", features = ["full"] }
tokio-util  = { version = "0.7", features = ["rt", "io"] }
async-trait = "0.1"
futures = "0.3"
governor = "0.10"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "1.1"
humantime-serde = "1"
figment = { version = "0.10", features = ["toml", "env", "json", "yaml"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "ansi"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive", "env", "color"] }
indicatif = "0.18"
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls", "socks", "multipart", "stream"]}
comfy-table = "7"
owo-colors = "4"
dialoguer = "0.12"
http = "1"
parking_lot = "0.12"
dashmap = "6"
once_cell = "1"
arc-swap = "1"
inventory = "0.3"
serde_yaml = "0.9"
crossbeam = "0.8"
flume = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
socket2 = { version = "0.6", features = ["all"] }
bytes = "1"
hickory-resolver = "0.26"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "1.0"
nom = "8"
rustls-pemfile = "2"
byteorder = "1"
minijinja = "2.19"
etherparse = "0.20"
sha2 = "0.11"
sha3 = "0.11"
md-5 = "0.11"
hmac = "0.13"
aes = "0.9"
chacha20poly1305 = "0.10"
argon2 = "0.5"
pbkdf2 = "0.13"
rand = "0.10"
rand_chacha = "0.10"
getrandom = "0.4"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
x509-parser = "0.18"
regex = "1"
tempfile = "3"
walkdir = "2"
globset = "0.4"
aho-corasick = "1"
csv = "1"
sled = "0.34"
tera = "1"
tokio-test = "0.4"
mockall = "0.14"
proptest = "1"
criterion = "0.8"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml", "json"] }
wiremock = "0.6"
ipnet = { version = "2", features = ["serde"] }
url = { version = "2", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
tracing-error = "0.2"
pin-project-lite = "0.2"
bon = "3"
itertools = "0.14"
rayon = "1" 
fake = "5" 
strum = { version = "0.28", features = ["derive"] }
rusqlite = "0.39" 
rstest = "0.26"
async-ssh2-tokio = "0.12"
humantime = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
# We run `clippy -- -D warnings` in CI. Keeping `pedantic` at warn would
# make every style preference (uninlined_format_args, collapsible_if,
# match_same_arms, doc_markdown, …) a hard CI failure. That's too
# aggressive for an early-stage codebase and produces churn rather than
# quality. So: pedantic is opt-in, and we explicitly enforce only the
# rules that catch *real* footguns.
pedantic = { level = "allow", priority = -1 }

# Hard bans — these catch genuine bugs / sloppy code.
unwrap_used = "deny"
dbg_macro = "deny"

# Soft signals — surface in local dev, won't fail CI.
expect_used = "warn"
panic = "warn"
todo = "warn"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"
overflow-checks = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.ci]
inherits = "test"
opt-level = 1
