[package]
name = "fatah-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
humantime-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
