[package]
name = "fatah-report"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fatah-core = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
comfy-table = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
